--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ h1, h2, h3 {
     display: none;
 }
 
+.logo-heading {
+    text-decoration: none;
+    align-items: start;
+}
+
 /* Header */
 header {
     background-color: #ffffff;
@@ -51,13 +56,14 @@ header a {
 }
 
 #menu {
-    font-size: 110%;
+    font-size: 125%;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
 #menu > li {
     margin-bottom: 1em;
+    margin: 3px;
 }
 
 .active {
@@ -112,7 +118,7 @@ main {
 }
 
 .lesson-card {
-    background: #fff;
+    background: #fcfff0;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, .1);
@@ -123,16 +129,20 @@ main {
 
 .lesson-card:hover {
     transform: scale(1.025);
-    background: #f4faa2;
+    background: #a9b115;
 }
 .speak-btn {
-    background: #f3ab12;
+    background: #798f00;
     color: #fff;
     border: none;
     padding: 4px 8px;
     margin:12px 0 0 12px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.speak-btn:hover {
+    background: #a9b115;
 }
 
 li{
@@ -167,7 +177,7 @@ li{
   padding: 8px 12px;
   margin: 7px 0;
   text-align: left;
-  background: #777;
+  background: #6c7200;
   border: none;
   border-bottom: 1px solid #ddd;
   cursor: pointer;
@@ -176,7 +186,8 @@ li{
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: #a9b115;
+    color: #252525;
 }
 
 .collapsible-content {
@@ -184,7 +195,7 @@ display: none; /* default */
   width: 100%;
   box-sizing: border-box;
   padding: 8px 12px;
-  background: #f1f1f1;
+  background: #f2fae0;
   border-left: none;
 }
 
