Fix asset paths in HTML files for correct loading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ header a {
     font-size: 220%;
     line-height: 47px;
     margin: 0 0.5rem;
-    color: #949e00;
+    color: #6c7200;
 }
 
 #menu {
@@ -161,7 +161,7 @@ li{
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #3a3a3a;
+    color: #6c7200;
 }
 
 .container {
