--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,38 @@ header a {
     margin: 3px;
 }
 
+
+li.dropdown{
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    margin-top: 3px;
+    background-color: #ffffff;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#dropdown-toggle:checked~.dropdown-content{
+    display: block;
+}
+
+#dropdown-toggle{
+    display: none;
+}
+
+
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
